--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,11 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:1.0.1'
+        compile 'com.squareup:otto:1.3.6'
+        compile 'com.squareup.okhttp:okhttp:2.2.0'
+        compile 'com.octo.android.robospice:robospice:1.4.14'
+        compile 'com.octo.android.robospice:robospice-retrofit:1.4.14'
+        compile 'com.jakewharton:butterknife:6.1.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
