--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,4 +22,10 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
+    compile 'com.squareup:otto:1.3.6'
+    compile 'com.squareup.okhttp:okhttp:2.2.0'
+    compile 'com.octo.android.robospice:robospice:1.4.14'
+    compile 'com.octo.android.robospice:robospice-retrofit:1.4.14'
+    compile 'com.jakewharton:butterknife:6.1.0'
+
 }
