--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,5 @@ android:
     # if you need to run emulator(s) during your tests
     - sys-img-armeabi-v7a-android-19
     - sys-img-x86-android-17
+notifications:
+  slack: trollware:qDXa9pKpe8OYYITRGpTlnV9U
