--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,9 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 21
     buildToolsVersion "21.1.1"
+    packagingOptions {
+        exclude 'META-INF/LICENSE.txt'
+    }
 
     defaultConfig {
         applicationId "maiev.trollware.com.maiev"
