--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,18 @@
+buildscript {
+    repositories {
+        maven { url 'http://download.crashlytics.com/maven' }
+    }
+
+    dependencies {
+        classpath 'com.crashlytics.tools.gradle:crashlytics-gradle:1.+'
+    }
+}
 apply plugin: 'com.android.application'
+apply plugin: 'crashlytics'
+
+repositories {
+    maven { url 'http://download.crashlytics.com/maven' }
+}
 
 android {
     compileSdkVersion 21
@@ -38,7 +52,10 @@ dependencies {
     compile 'com.squareup:otto:1.3.6'
     compile 'com.squareup.okhttp:okhttp:2.2.0'
     compile 'com.octo.android.robospice:robospice:1.4.14'
+    compile 'com.github.nkzawa:socket.io-client:0.3.0'
     compile 'com.octo.android.robospice:robospice-retrofit:1.4.14'
     compile 'com.jakewharton:butterknife:6.1.0'
-
+    compile 'com.crashlytics.android:crashlytics:1.+'
+    compile 'com.github.nkzawa:socket.io-client:0.4.1'
+    compile 'io.reactivex:rxandroid:0.24.0'
 }
